# KUKA1

./: CMakeLists.txt  CMakeLists.txt~  kuka调试+(tams110's+conflicted+copy+2017-06-02).md  package.xml  package.xml~  runKUKA_moveit.py  setup.py~
include/: DataLogging.h  Doxygen.h  FastResearchInterface.h  FastResearchInterfaceTest.h  InitializationFileEntry.h  LWRBaseControllerInterface.h  LWRCartImpedanceController.h  LWRJointImpedanceController.h  LWRJointPositionController.h  LinuxAbstraction.h  MACOSAbstraction.h  OSAbstraction.h  QNXAbstraction.h  WindowsAbstraction.h  friudp.h  friutil.h  ros_fri_hannes.h
launch/: agent_ros_kuka_actionlib.launch  agent_ros_kuka_fri.launch  agent_ros_kuka_fri_force.launch  agent_ros_kuka_separate.launch  agent_spawnObj_Scene.launch  kinect_frame.launch
msg/: DataRequest.msg~  GripperCommand.msg  PositionCommand.msg  SampleResult.msg  objCommand.msg
scripts/: KUKA_add_frame.py  KUKA_reachToGrasp.py  UR5_env.py~  agent_ur5.py~
scripts/back-up/: KUKA_jointcontrol.py  __init__.py  agent_PR2.py  agent_kuka_joint.py  agent_kuka_joint_grasp.py  agent_kuka_moveit.py  agent_ur5.py  agent_utils.py  config.py  runKUKA_moveit.py  runPR2_moveit.py
src/: runKUKA_actionlib.cpp  runKUKA_actionlib_V2.cpp  runKUKA_fri.cpp  runKUKA_fri_V2.cpp  runKUKA_fri_control.cpp  runKUKA_fri_data.cpp  runKUKA_fri_gripper.cpp  runKUKA_fri_msg.cpp  runKUKA_fri_msg_V2.cpp  runKUKA_fri_msg_force.cpp  spawnObj_Scene.cpp  testee.cpp
